# Compilers_Final

./: Makefile  compile.ml  dune  dune-project  exprs.ml  gc.c  gc.h  main.c  main.ml  phases.ml  runner.ml  sample.garter  test.ml
input/do_err/: README
input/do_pass/: README  bug_find.garter  egg_t10.out  egg_t9.out  non_tail_call_t5.garter  spam_stack_but_tail.garter  test.garter
input/dont_err/: README
input/dont_pass/: README
output/do_pass/: README.txt:Zone.Identifier
