(library
  (name garter_impl)
  (modules assembly compile errors exprs phases pretty runner lexer parser)
  (libraries ounit2 extlib unix)
  (wrapped false))

(ocamllex (modules lexer))
(menhir (modules parser))

(executable
  (name main)
  (modules main)
  (libraries garter_impl))

(test
  (name test)
  (modules test)
  (libraries garter_impl))

(env (dev (flags (:standard -warn-error -A))))

